k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentiment-analyzer-app
  labels:
    app: sentiment-analyzer-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sentiment-analyzer-app
  template:
    metadata:
      labels:
        app: sentiment-analyzer-app
    spec:
      containers:
        - name: sentiment-analyzer-app
          image: sentiment-analyzer-app:1.0.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
      terminationGracePeriodSeconds: 30
